--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -13,16 +13,17 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@domain.com
+title: SLAM Documentation Site
+email: Matthew.B.Brock@live.mercer.edu  
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  This site is for the SLAM PDR documentation. 
+  This site will host all of the resources for this project for
+  future use from other teams that have an intrest in continuing 
+  this project.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://example.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "https://mbrock0814.github.io/SLAM/" # the base hostname & protocol for your site
+twitter_username: @MercerYou
+github_username:  MBrock0814
 
 # Build settings
 markdown: kramdown
